UI fixes
> programs dropdown no longer overflows off screen on account manager dialog
> shorten 'create new client file' header to 'new client file'

--- a/src/accountManagerTab.styl
+++ b/src/accountManagerTab.styl
@@ -20,8 +20,13 @@
 				text-align center
 				font-weight 300
 
-			#userProgram > span
-				border-bottom 2px solid transparent
+			#userProgram
+				> span
+					border-bottom 2px solid transparent
+
+				.dropdown-menu
+					max-height 155px
+					overflow-y auto
 
 		&#accountActions
 
